--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY=BKvh-tc86evsi-8tOdWcioiVSaSKUl2eevPpvRf22PPAO4YC
 
 # 0x Configuration
 ZEROX_API_KEY="137eb883-5172-4acc-beec-e1828874bfb7"
+
+NEXT_PUBLIC_CHAIN_ID=10143             # Monad Testnet
+NEXT_PUBLIC_RPC_URL=https://testnet-rpc.monad.xyz
+NEXT_PUBLIC_BLOCK_EXPLORER=https://testnet.monadexplorer.com
