--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@privy-io/wagmi": "^1.0.4",
     "@serwist/next": "^9.0.15",
     "@tanstack/react-query": "^5.81.2",
+    "ethers": "^6.15.0",
     "next": "14.2.30",
     "qrcode.react": "^4.2.0",
     "qs": "^6.14.0",
