--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@serwist/next": "^9.0.15",
     "@tanstack/react-query": "^5.81.2",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.21",
+    "lucide-react": "^0.544.0",
     "next": "14.2.30",
     "qrcode.react": "^4.2.0",
     "qs": "^6.14.0",
