--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "web-push": "3.6.7"
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.5",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
     "@types/react": "^18",
